<resources>
    <string name="app_name">PatientInfo</string>
    <string name="patient_info">Patient Info</string>
    <string name="patient_list">Patient List</string>
    <string name="new_patient">New Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="address">Address</string>
    <string name="enter_uhid">Enter UHID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="patient_details">Patient Details</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>