<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/faintBlue"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/paitentName"
            android:hint="@string/patient_name"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:inputType="textPersonName"
            android:layout_column="2"
            android:background="@drawable/rectangle_filled_white"
            android:layout_height="wrap_content"/>


        <EditText
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_uhid"
            android:id="@+id/uhid"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/rectangle_filled_white"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/age"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/age"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/rectangle_filled_white"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/rectangle_filled_white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <Spinner
                android:id="@+id/gender"
                android:text="@string/patient_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:entries="@array/gender"
                android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rectangle_filled_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dob"
                android:textColorHint="@color/black"
                android:hint="@string/date_of_birth"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:entries="@array/gender"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/down_arrow_dark"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>


        </LinearLayout>

        <EditText
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/address"
            android:id="@+id/address"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/rectangle_filled_white"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:inputType="number"
            android:id="@+id/mobileNumber"
            android:background="@drawable/rectangle_filled_white"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:id="@+id/submitBtn"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/transparentPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</LinearLayout>
</layout>