<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.PatientListActivity"
        android:orientation="vertical">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_list"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/new_patient"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/newPatientBtn"
            android:background="@drawable/rectangle_border_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"/>

    <Button
        android:layout_gravity="end"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/refresh"
        android:id="@+id/refreshBtn"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/transparentPrimary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>




</LinearLayout>
    </RelativeLayout>
</layout>